<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_alarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.haiminhtran.alarm.AddAlarmActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:background="@color/transparent"
            android:id="@+id/btn_cancel"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_alarm"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:text="@string/add"
            android:textColor="@color/transparent"
            android:id="@+id/btn_add"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_marginTop="@dimen/margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/again"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/chooseIndicator">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/once"
                android:id="@+id/indicator"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_narrow"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chooseMusic">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="Default"
                android:id="@+id/music"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_folder"/>
        </LinearLayout>
    </LinearLayout>


        <TimePicker
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker"
            android:numbersTextColor="@color/background"
            android:numbersBackgroundColor="@color/background"
            android:timePickerMode="spinner"


            />




</LinearLayout>
